src/test/deca/context/invalid/inst_return_in_void_method_intMethod.deca
// Test of the rule (3.24): not possible to return something
// when we are not expecting a return

class A  {

    int getInt(){
        return 5;
    }

    void voidMethod(){
        return getInt();
    }
}



// Resultat:

//# TODO message error
